[package]
name = "get-rtor-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.12"
irlf-db = { version = "0.1.0", path = "../irlf-db" }
lf-types = { version = "0.1.0", path = "../lf-types" }
salsa = { version = "0.1.0", path = "../salsa/components/salsa-2022" }
