[package]
name = "get-rtor-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
closure = "0.3.0"
dyn-clone = "1.0.12"
expect-test = "1.4.1"
irlf-db = { version = "0.1.0", path = "../irlf-db" }
lf-types = { version = "0.1.0", path = "../lf-types" }
salsa = { version = "0.1.0", path = "../salsa/components/salsa-2022" }
