[package]
name = "irlf-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irlf-ser = { version = "0.1.0", path = "../irlf-ser" }
memoize = "0.4.0"
salsa = { version = "0.1.0", path = "../salsa/components/salsa-2022" }
