[package]
name = "irlf-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expect-test = "1.4.1"
irlf-ser = { version = "0.1.0", path = "../irlf-ser" }
lf-types = { version = "0.1.0", path = "../lf-types" }
memoize = "0.4.0"
pretty_assertions = "1.4.0"
salsa = { version = "0.1.0", path = "../salsa/components/salsa-2022" }
